# mseq_embedded

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
driver/: Cargo.toml
driver/src/: display_lcd_lcm2004.rs  lib.rs  serial_write.rs
kernel/: Cargo.toml  build.rs  memory.x
kernel/src/: driver.rs  exit.rs  heap.rs  main.rs  midi_connection.rs  midi_input.rs  rtt_logger.rs  screen.rs
src/: conductor.rs  debug.rs  main.rs  midi.rs  midi_connection.rs  screen.rs
user/: Cargo.toml
user/src/: conductor.rs  lib.rs
