[workspace]
resolver = "2"
members = [ 
    "driver",
    "kernel",
    "user",
]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 2
overflow-checks = false

