[package]
name = "user"
version = "0.1.0"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
edition = "2024"

[dependencies]
log = { version = "0.4.27", default-features = false }
mseq_core = {version ="0.1" , default-features = false}
postcard = {version = "1.1.1", default-features = false }
heapless = "0.8.0"

driver = {path = "../driver"}
